--- a/pokedex-app/src/index.html
+++ b/pokedex-app/src/index.html
@@ -12,7 +12,7 @@
   <meta http-equiv="Content-Security-Policy" content="
       worker-src blob:; 
       child-src blob: gap:;
-      img-src 'self' blob: data:;
+      img-src * 'self' data: https:;
       default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap: content:">
 </head>
 
