--- a/pokedex-app/src/index.html
+++ b/pokedex-app/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Responsive sidenav</title>
-  <base href="/">
+  <base href="https://thisami.github.io/pokedex-app/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
